add Command pattern

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,9 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(patterns VERSION 1.0)
-add_executable(patterns src/main.cpp)
+
+file(GLOB_RECURSE SRC_FILES src/*.cpp)
+add_executable(patterns ${SRC_FILES})
+
 target_include_directories(patterns PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
